Update the skills accordingly for new additions and lessons learnt